# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.18_beta3.ebuild, +sun-jdk-1.6.0.18_beta5.ebuild:
  Version bump.

  19 Nov 2009; fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha74.ebuild, +sun-jdk-1.7.0.0_alpha76.ebuild:
  Version bump.

  06 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.18_beta2.ebuild, +sun-jdk-1.6.0.18_beta4.ebuild,
  -sun-jdk-1.7.0.0_alpha73.ebuild, +sun-jdk-1.7.0.0_alpha75.ebuild:
  Version bump.

  19 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.18_beta3.ebuild, sun-jdk-1.7.0.0_alpha74.ebuild:
  Fix check_license call and call java-vm-2_pkg_setup.

  19 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.18_beta2.ebuild, sun-jdk-1.6.0.18_beta3.ebuild,
  sun-jdk-1.7.0.0_alpha74.ebuild:
  Replace RESTRICT=fetch with ACCEPT_LICENSE stuff. Set it and forget it!

  16 Oct 2009; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha74.ebuild, -sun-jdk-1.7.0.0_alpha72.ebuild:
  Bump

  12 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.6.0.18_beta3.ebuild, sun-jdk-1.7.0.0_alpha73.ebuild:
  1.6: version bump. 1.7: add missing gcc-4.2 dependency (bug #267495), amd64
  plugin (bug #287802) and x86 plugin2.

  02 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.14_beta5.ebuild, -sun-jdk-1.6.0.14_beta6.ebuild,
  +sun-jdk-1.6.0.18_beta2.ebuild:
  Bump new 1.6 early access.

  02 Oct 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha71.ebuild, +sun-jdk-1.7.0.0_alpha73.ebuild:
  Bump

  17 Sep 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha70.ebuild, +sun-jdk-1.7.0.0_alpha72.ebuild:
  Bump

  07 Sep 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha68.ebuild, +sun-jdk-1.7.0.0_alpha71.ebuild:
  Bump

  23 Aug 2009, Fabian Fingerle <fabian@datensalat.eu>