@@ -5,13 +5,10 @@ DIST jdk-6u18-ea-bin-b04-linux-amd64-28_oct_2009.bin 81903252 RMD160 072d1198125
 DIST jdk-6u18-ea-bin-b04-linux-i586-28_oct_2009.bin 81844478 RMD160 04111881ceb2f459813466c85993afd1f68781e7 SHA1 422c4941b20d087369ce4d556660f9376eec2350 SHA256 3cd7d0cb05e53bbc8f4088f9c44b65b70940af389e344b204fd50a1045fca8e5
 DIST jdk-6u18-ea-bin-b05-linux-amd64-18_nov_2009.bin 81846790 RMD160 20bc2d29cadd80cdee442f40c5582151cf26326d SHA1 103603067c097206264729a502e436e857ace692 SHA256 4e2e6a6061331e4fc76d763558c13d0a43549669d31b5bce19fd04abd20c0b3e
 DIST jdk-6u18-ea-bin-b05-linux-i586-18_nov_2009.bin 81785883 RMD160 12feb1b4eaa022f659b7415b1003b332f3201c86 SHA1 c4a42832146b564256352276f6c4c66f3c598ce1 SHA256 7764f1ccfab37e75b9e0d24acc4765aeec92f024b749ade3fef67f2572006dc5
-DIST jdk-7-ea-bin-b75-linux-i586-30_oct_2009.bin 89664251 RMD160 0ff3b5b1362e3c7405965694f7fcae1c87ab55bc SHA1 05ec13490bb9c116183036622cdf4f54be32b4dc SHA256 5e5503e58882842829d0cdd49643df6f853e140575e2b4a3bde0872fccdafa92
-DIST jdk-7-ea-bin-b75-linux-x64-30_oct_2009.bin 89033190 RMD160 56dc40b8181bd6832083221edab39327c66e8f7f SHA1 6bb3b765778076a1c0faa0819b98973901b949e3 SHA256 8c49d9e66662e95cf817825f2107795e17bf0981adfe302d259571daeb9c05e9
-DIST jdk-7-ea-bin-b76-linux-i586-12_nov_2009.bin 89803327 RMD160 ca50e94380a34969c4700289743c0edbb33c01ef SHA1 c5d124891020f63580fa92eda491f35954dc48d1 SHA256 6e50988e504f25c0783e7afb9118b1141568d0ea8fa14f5b93cbed49012459d2
-DIST jdk-7-ea-bin-b76-linux-x64-12_nov_2009.bin 89170553 RMD160 a5cea91d96a94f824cb2bbd00b1b8a78fa029ab0 SHA1 cab26a8bbc90ca0cecef3e13333a0bf1964aceeb SHA256 07f43dc6d0d93096a68ad750902d31c7cb16c66b8926ca2a3d0ac516a57ec3a2
+DIST jdk-7-ea-bin-b77-linux-i586-03_dec_2009.bin 89411284 RMD160 67a871ee879b5322050bc56f73e416779784d739 SHA1 93152e1c5a2224c42d5a5e76f5396a70a7ca0b6f SHA256 4d47febd1109f39b91a0cfe0d8bb25b152db73e44f4f2135f6fdd71730ccaf37
+DIST jdk-7-ea-bin-b77-linux-x64-03_dec_2009.bin 88784374 RMD160 489aeca79668c24b6fea0b163a6bfebd7ffe3915 SHA1 ddaf3559a0b950831826ce5bbee5afba17b9f1b1 SHA256 36157472836890311b5d2858d4c19191516fbcef31629d4da1a2747cbc8eca65
 EBUILD sun-jdk-1.6.0.18_beta4.ebuild 5526 RMD160 982407152283f44921f49feda14439df3db20d2b SHA1 54de82e1975c277d58805d92b517f51b57cee9a2 SHA256 23acfe2a9a2344490ee1c8728afff9371a9bc3a80d75345a0536d3cf03b66ef8
 EBUILD sun-jdk-1.6.0.18_beta5.ebuild 5526 RMD160 c2d0f060c83a90fa35cbe7b4d1bbf241a4daaeae SHA1 b8bfcc5afedc564083663866d70a34a29e871f3c SHA256 9cc9480c10a1593d877b315c463c2501079fec6822008192ffce5470a41327b8
-EBUILD sun-jdk-1.7.0.0_alpha75.ebuild 5247 RMD160 5fbeb16b65404be77172ec39ee8f020359c82fcf SHA1 0f73393205dc05046056abc5372a482e8c0f22ad SHA256 0d119bdc99813f74705b383bcbee39ba3d65b9ee12d4402a390f184494a7b7d7
-EBUILD sun-jdk-1.7.0.0_alpha76.ebuild 5247 RMD160 f505d2020abcb75648c01b2affc2b6890f63ccc4 SHA1 d0df63176b9ea04f97e1a5b7f53fb5dcfd5f4085 SHA256 c449538fce6c01fc9f159e460b422a2bb106cab4c44ba86a259ff728f659fcea
-MISC ChangeLog 16961 RMD160 c45a6fd190ccde0fc95454490477baa0bf7b2d7c SHA1 80925c3dd5fb5559dbc6965d2f003c02036cfd5e SHA256 4a004a10a8664e53464ad40d7f90c992c4631109a035774269a379f777d4fea1
+EBUILD sun-jdk-1.7.0.0_alpha77.ebuild 5247 RMD160 1f7ef50bf970c93e1ddf6ab4f591e21cdc060c8b SHA1 b689eabc1b7a48e2f9e2d9a68ddfa7ea9d893664 SHA256 23705d2b467160d9900b32956aee752005e093909dea01282d5248a935f49e9b
+MISC ChangeLog 17134 RMD160 e282cc435132b63d2b45dcbfa91e9dd6032bd460 SHA1 3ab910074e78f1529cb6d3d478d85953dd54f69c SHA256 dd79291fa1cc1fdd0c3253dd04e02d240925b0b373810f36cb645e8814895a32
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
